# vv-mcp.nvim

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  README.zh-CN.md  rust-toolchain.toml
.github/workflows/: ci.yml  release.yml
crates/vv-mcp/: Cargo.toml
crates/vv-mcp/src/: main.rs  server.rs
crates/vv-mcp/src/instance/: mod.rs  model.rs  registry.rs  resolver.rs
crates/vv-mcp/src/nvim/: client.rs  mod.rs  transport.rs
crates/vv-mcp/src/output/: call_hierarchy.rs  code_actions.rs  config.rs  diagnostics.rs  document_features.rs  documentation.rs  editor.rs  highlights.rs  locations.rs  markdown.rs  mod.rs  model.rs  rename.rs  symbols.rs  workspace.rs
lua/vv-mcp/: binary.lua  commands.lua  config.lua  editor.lua  init.lua  instance.lua  lifecycle.lua  lsp.lua  registry.lua  version.lua  workspace.lua
lua/vv-mcp/lsp/: call_hierarchy.lua  code_actions.lua  context.lua  diagnostics.lua  document_features.lua  highlights.lua  init.lua  intelligence.lua  navigation.lua  normalize.lua  operations.lua  path_origin.lua  rename.lua  symbols.lua  workspace_edit.lua
tests/: minimal_init.lua  test_binary.lua  test_code_actions.lua  test_instance.lua  test_lsp_context.lua  test_registry.lua  test_rename.lua  test_workspace.lua  test_workspace_symlink.lua
