[package]
name = 'vv-mcp'
version = '0.2.0'
edition = '2024'
description = 'Expose active Neovim LSP clients through MCP'
license = 'MIT'

[[bin]]
name = 'vv-mcp'
path = 'src/main.rs'

[dependencies]
anyhow = '1'
clap = { version = '4', features = ['derive', 'env'] }
ignore = '0.4'
rmcp = { version = '2.2.0', features = ['server', 'transport-io'] }
rmpv = { version = '1', features = ['with-serde'] }
schemars = '1'
serde = { version = '1', features = ['derive'] }
serde_json = '1'
thiserror = '2'
tokio = { version = '1', features = ['full'] }
typed-path = '0.12'
